# galvanet

./: README.md  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 724b727cf099_database.py  7c25fe3fef7c_add_last_activity_column_to_users.py  9f28721b62b5_create_users_table.py
src/: chat.html  index.html
src/galvanet/: app.py  database.py  models.py  schemas.py  security.py  settings.py
tests/: conftest.py  test_app.py  test_models.py  test_security.py
