[project]
name = "galvanet"
version = "0.1.0"
description = ""
authors = [
    {name = "slottwo", email = "41028091+slottwo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "galvanet", from = "src"}]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
ruff = "^0.11.0"
pytest = "^8.3.5"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
