[project]
name = "galvanet"
version = "0.1.0"
description = ""
authors = [
    { name = "slottwo", email = "41028091+slottwo@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)", 
    "alembic (>=1.15.2,<2.0.0)", 
    "sqlalchemy (>=2.0.40,<3.0.0)", 
    "pydantic-settings (>=2.8.1,<3.0.0)", 
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry]
packages = [{ include = "galvanet", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.11.2"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
lint       = 'ruff check'
pre_format = 'task lint --fix'
format     = 'ruff format'
run        = 'fastapi dev src/galvanet/app.py'
pre_test   = 'task lint'
test       = 'pytest -s -x --cov=galvanet -vv'
post_test  = 'coverage html'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
# quote-style = 'preserve'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
